--- a/index.HTML
+++ b/index.HTML
@@ -8,7 +8,7 @@
     <body>
         <div class="container">
             <h1 class="page-title">
-              Séries 2022
+              Séries assistidas em 2022
             </h1>
             <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg" class="page-logo" alt="">
           </div>
